# Programier-bung2_Aufgabe2-5

./: README.md  create_power_curve.py  ekgdata.py  main.py  person.py  pyproject.toml  read_data.py  read_pandas.py
pandas_uebung/: PÜ3_2_Pandas.ipynb
