[project]
name = "Programier-bung2_Aufgabe2-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "J4nickH", email = "ha1220@mci4me.at"},
    {name = "jlmci", email = "lj9092@mci4me.at"},
]
dependencies = [
    "streamlit>=1.12.0",
    "jupyter>=1.1.1",
    "plotly>=6.1.2",
    "kaleido!=0.2.1.post1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
